# cargo-nfpm

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  deny.toml  flake.nix  justfile  update-vendor.sh
.cargo/: config.toml
.github/workflows/: ci.yml  dist.yml
extras/: schema.json
fixtures/: all.toml
nix/: package.nix
src/: cargo.rs  cargo_schema.rs  generator.rs  lib.rs  main.rs  nfpm.rs  nfpm_schema.rs  strip.rs  triple.rs
test-projects/single-project/: Cargo.toml
test-projects/workspace-project/: Cargo.toml
test-projects/workspace-project/crates/bin1/: Cargo.toml
test-projects/workspace-project/crates/bin1/src/: main.rs
test-projects/workspace-project/crates/lib1/: Cargo.toml
test-projects/workspace-project/crates/lib1/src/: lib.rs
tests/it/: cli.rs  main.rs  parsing.rs
