[package]
name = "cargo-nfpm"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Arvid Gerstmann <github@arvid.io>"]
homepage = "https://github.com/ragnarlab/cargo-nfpm"
repository = "https://github.com/ragnarlab/cargo-nfpm"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
cargo_metadata = "0.19"
anyhow = "1"
camino = "1.1"

[build-dependencies]
