[package]
name = "cargo-nfpm"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
authors = ["Arvid Gerstmann <github@arvid.io>"]
homepage = "https://github.com/ragnarlab/cargo-nfpm"
repository = "https://github.com/ragnarlab/cargo-nfpm"
keywords = ["cargo", "subcommand", "cargo-subcommand", "packaging"]
categories = ["development-tools::cargo-plugins", "development-tools::build-utils", "command-line-utilities"]
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
cargo_metadata = "0.19"
anyhow = "1"
camino = "1.1"
ureq = "3"
flate2 = "1.1"
tar = "0.4"
sha2 = "0.10"
hex = "0.4"

[build-dependencies]
