[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.85"
edition = "2024"
authors = ["jd@example.com"]
homepage = "https://github.com/ragnarlab"
repository = "https://github.com/ragnarlab/cargo-nfpm"

[workspace.dependencies]
lib1 = { path = "./crates/lib1" }
bin1 = { path = "./crates/bin1" }
